# shimport

./: .pynchon.json5  LICENSE  Makefile  README.md  README.md.j2  setup.cfg  setup.py  tox.ini
.github/workflows/: python-app.yml  python-publish.yml  python-test.yml
docs/api/: README.md
src/shimport/: models.py  module.py  util.py
src/shimport/abcs/: __init__.py
src/shimport/util/: __init__.py  lme.py  oop.py  typing.py
tests/integration/: test_imports.py
tests/units/: test_all.py  test_imports.py
