# setup.cfg for shimport
# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = shimport
description = Autodocs for python projects
author = elo
#author_email = info@elo-enterprises
platforms = any
license = MIT
license_files = LICENSE.txt
long_description = See the project README
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/elo-enterprises/shimport/
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/elo-enterprises/shimport/
    Source = https://github.com/elo-enterprises/shimport/
    Download = https://github.com/elo-enterprises/shimport/#files

# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python

[options]
zip_safe = False
zip_ok = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >3.6

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    # datastructures / validation / functools
    memoized-property==1.0.3
    memoization==0.4.0
    multipledispatch==0.6.0
    pydantic
    # events/signals
    blinker==1.6.2
    # lexers/parsers for json5,yaml,toml, ebnf, etc
    pygments
    pyjson5==1.6.1
    pyyaml                  # parsing yaml
    #TatSu==5.8.3            # parser for ebnf
    TatSu            # parser for ebnf
    trogon # experimental
    tomli_w==1.0.0          # parsing toml
    tomli                   # as tomllib; tomllib only available in py3.11
    # parsing json by dotpath
    pydash==7.0.1
    # python ast-dumper
    griffe==0.23.0
    # cyclomatic code complexity
    mccabe==0.7.0
    # templating
    Jinja2==3.1.2
    cookiecutter==2.1.1
    # cli primitives
    click
    # cli ncurses
    enlighten==1.11.2
    # cli windowing toolkit
    rich==13.3.4
    # webserver for github-markdown
    grip==4.6.1
    # mostly for managing grip daemons
    psutil==5.9.5

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]

# installed via `pip install .[dev]`
dev =
    IPython

# NB: This section is used by CI, via `make test`, which invokes tox.  See also `tox.ini`
# installed via `pip install .[testing]`
testing =
    IPython
    tox
    pytest
    pytest-cov
    mock
    flake8==5.0.4

# NB: This section is used by CI, via `make static-analysis`.  See also `Makefile`
# Installed via `pip install .[lint]`.
lint =
    tox

# NB: This section is used by CI, via `make publish`.  See also `Makefile`
# installed via `pip install .[publish]`
publish =
    twine

[options.package_data]
* = *.json

# [options.entry_points]
# console_scripts =
#      shimport = shimport.bin:entry


[tool:pytest]
addopts =
    --cov shimport --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests