##
# setup.cfg for shimport
# Read more about setup.cfg options:
#   https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
#   https://setuptools.pypa.io/en/latest/references/keywords.html
##
[metadata]
name = shimport
description = Import tools for python projects
author = elo
platforms = any
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elo-enterprises/shimport/
project_urls =
    Documentation = https://github.com/elo-enterprises/shimport/
    Source = https://github.com/elo-enterprises/shimport/
    Download = https://github.com/elo-enterprises/shimport/#files
classifiers =
    Programming Language :: Python

[options]
zip_safe = False
zip_ok = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >3.7

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]

# installed via `pip install .[dev]`
dev =
    IPython

# NB: This section is used by CI, via `make test`, which invokes tox.  See also `tox.ini`
# installed via `pip install .[testing]`
testing =
    IPython
    tox
    pytest
    pytest-cov
    mock
    flake8==5.0.4

# NB: This section is used by CI, via `make static-analysis`.  See also `Makefile`
# Installed via `pip install .[lint]`.
lint =
    tox

# NB: This section is used by CI, via `make release`.  See also `Makefile`
# installed via `pip install .[publish]`
publish =
    twine

[options.package_data]
* = *.json

[tool:pytest]
addopts =
    --cov shimport --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests